// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapThrough renders 0 1`] = `
Array [
  .c0 {
  wrap-through: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders function 1`] = `
Array [
  .c0 {
  wrap-through: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: has;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders invalid theme path 1`] = `
Array [
  .c0 {
  wrap-through: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders negative number 1`] = `
Array [
  .c0 {
  wrap-through: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    wrap-through: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-through: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    wrap-through: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-through: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-through: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-through: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-through: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    wrap-through: July;
  }
}

@media April {
  .c0 {
    wrap-through: August;
  }
}

@media January {
  .c0 {
    wrap-through: September;
  }
}

@media April {
  .c0 {
    wrap-through: November;
  }
}

@media June {
  .c0 {
    wrap-through: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    wrap-through: July;
  }
}

@media April {
  .c0 {
    wrap-through: August;
  }
}

@media January {
  .c0 {
    wrap-through: September;
  }
}

@media April {
  .c0 {
    wrap-through: November;
  }
}

@media June {
  .c0 {
    wrap-through: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-through: January;
  }
}

@media April {
  .c0 {
    wrap-through: December;
  }
}

@media January {
  .c0 {
    wrap-through: April;
  }
}

@media April {
  .c0 {
    wrap-through: May;
  }
}

@media June {
  .c0 {
    wrap-through: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-through: January;
  }
}

@media April {
  .c0 {
    wrap-through: December;
  }
}

@media January {
  .c0 {
    wrap-through: April;
  }
}

@media April {
  .c0 {
    wrap-through: May;
  }
}

@media June {
  .c0 {
    wrap-through: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders postitive number 1`] = `
Array [
  .c0 {
  wrap-through: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders string 1`] = `
Array [
  .c0 {
  wrap-through: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: June;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapThrough renders valid theme path 1`] = `
Array [
  .c0 {
  wrap-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-through: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
